# zieckey-study-code

./: ProjectHome.md
DirectUI/DUIProj/: DUIProj.sln
DirectUI/DUIProj/Entry/: BusinessHandler.cpp  Entry.rc  Entry.vcproj  MainDlg.cpp  MainDlg.h  MyModule.cpp  Resource.h  bkwinres.rc2  stdafx.cpp
DirectUI/XYNetDoctorGUI/XYNetGuard/: DiagnoseResultListCtrl.cpp  HomeViewUIHandler.cpp  ListViewCtrlEx.cpp  ListViewCtrlEx.h  NetConfigUIHandler.h  NetworkDevice.cpp  XYNetGuardMainDlg.cpp  XYNetGuardMainDlg.h  XYNetGuardMsgBox.cpp  XYNetGuard_VS2010.vcproj  bkwinres.rc2  resource.h
StudySolution/: StudySolution.sln
StudySolution/CPP/Test/: Test.vcproj
StudySolution/OpenGL/Lesson_2_Your_First_Polygon/: OpenGLGame.cpp.orig
StudySolution/OpenGL/Lesson_3_Add_Color/: OpenGLGame.cpp.orig
StudySolution/OpenGL/Lesson_4_Rotate/: OpenGLGame.cpp.orig
StudySolution/OpenGL/Lesson_5_3D_Shapes/: OpenGLGame.cpp.orig
StudySolution/OpenGL/Lesson_6_Texture_Mapping/: OpenGLGame.h  OpenGLGame.h.orig
StudySolution/OpenGL/Lesson_7_Texture_Filters_Lighting_Keyboard_Control/: Lesson_7_Texture_Filters_Lighting_Keyboard_Control.vcproj  OpenGLGame.h.orig
StudySolution/OpenGL_Programming_Guide/Chapter2/: lines.h  lines.vcproj  main.cpp  polys.h
StudySolution/OpenGL_Programming_Guide/Chapter3/: chapter3.vcproj
StudySolution/OpenGL_Programming_Guide/Chapter6/: aaindex.h  aargb.h  alpha.h  chapter6.vcproj  common.h  fogcoord.h  main.cpp
StudySolution/OpenGL_Programming_Guide/Chapter7/: chapter7.vcproj  main.cpp
StudySolution/OpenGL_Programming_Guide/Chapter8/: font.h
StudySolution/OpenGL_Programming_Guide/Chapter9/: main.cpp
StudySolution/OpenGL_Super_Bible/Chapter3_Line_stripper/: Chapter3_Line_stripper.cpp  OpenGLGame.cpp
StudySolution/OpenGL_Super_Bible/Chapter4_sphere_world/: Main_Chapter4_sphere_world.cpp
StudySolution/OpenGL_Super_Bible/The_simple_world/: OpenGLGame.h
StudySolution/STL/functor/: inc.h
StudySolution/STL/functor2/: main.cpp
StudySolution/Socket/tcpechotest/: TcpEchoClient.cpp.orig  TcpEchoServer.cpp
branches/cloudcom-wce/: addtoqmodule.sh  cloudcom.sln  wce-cloudcom.sln
cloudcom/: Makefile  README  cloudcom.sln  config.h  sed-qoslib-osl.sh
cloudcom/install/etc/: auth.ini
cloudcom/src/apputil/: Makefile
cloudcom/src/apputil/src/: Makefile.am  QCACenter.cpp  apputil.vcproj  inner_pre.cc
cloudcom/src/idea/: Makefile  i_cfb64.c  i_ofb64.c  idea.vcproj
cloudcom/src/libtest/: Makefile
cloudcom/src/mkslrsa/: main.cc  mkslrsa_test.vcproj
cloudcom/src/net/: Makefile
cloudcom/src/net/src/: Makefile.am  Makefile.in  QCURLService.cpp  QHttpGetWork.cpp  QHttpPostFile.cpp  QHttpPostWork.cpp  QNetPrerequisits.cpp  curl_work.cc  http_post_work.cc  inner_pre.cc  net.vcproj
cloudcom/src/netproto/: Makefile
cloudcom/src/osl/: Makefile
cloudcom/src/slrsa/: Makefile  expamle.txt  libslrsa.vcproj  main.cpp  md5c.c  nn.h  r_random.c  rsa.c  slrsa.c  slrsa.cpp  slrsa_test.vcproj
cloudcom/src/wraputil/: Makefile
cloudcom2/: AUTHORS  Makefile
doc/document/: C++性能优化.txt  问题困难疑惑处理过程.txt
eclipseworkspace/python/: .pydevproject
eclipseworkspace/thrift/: .classpath
good_code/GzipHelper_demo/: GZipHelper.h  Gziphelper.html
good_code/cpp_submitter/: README  file_handler.cc  file_reader.cc  main.cc  path_reader.cc  path_reader.h
nginx/doc/: Socket常用的数据结构.txt  ioctl与setsockopt区别.TXT
nginx/nginx/: UpgradeLog.XML  nginx.sln.old  nginx.vcproj  nginx.vcproj.8.00.old  ngx_modules.c
nm/: nm-src-all.sln
nm/doc/: deploy files.txt  接口引用文档.txt
nm/http/: copy.bat  http.vcproj
nm/http/include/: exp.h  (+2 more)
nm/logic/: ReadMe.txt  logic.vcproj  stdafx.cpp  stdafx.h
nm/test-http/: resourceppc.h  stdafx.h  test-http.h  test-http.vcproj  test-httpDlg.cpp  test-httpDlg.h  test-httpppc.aps
qqweibo/C++SDK-v1.2/: README.txt
scriptstudy/: svn_usage.txt  svnci.txt
scriptstudy/shell/: sed.txt  svndiff.sh  tr.txt
studysolution/OpenGLCommon/: GLTools.h  UnitAxes.cpp
studysolution/php/: int2str_str2int.php  referrence_parameter.php
tags/cloudcom-netproto-v1/: AUTHORS  addtoqmodule.sh
thrift/doc/: Apache Thrift入门1.doc
trunk/StudySolution/: StudySolution.sln
trunk/cloudcom/: AUTHORS  Makefile  cloudcom.sln  copy_libs_to_storage_cluster.sh  sed_qoslib_osl.sh
trunk/cloudcom/src/libtest/src/: Makefile.am  QLevelDBBenchAnalyse.cpp  QLibTestPrerequisits.cpp  QMain.cpp  QTestAppShell.cpp  QTestBase64.cpp  QTestCACenter.cpp  QTestCompileCheck.cpp  QTestCurl.cpp  QTestEditHistory.cpp  QTestFileUtil.cpp  QTestINIParser.cpp  QTestLog.cpp  QTestMemAlloc.cpp  QTestMemcached.cpp  QTestOS.cpp  QTestThreads.cpp  QTestTokener.cpp  QTestTrivial.cpp  compile_check_test.cc  data_stream_test.cc  file_util_test.cc  lib_test.cc  libmemcached_get_performance_test.cc  libmemcached_get_performance_test.cpp  libmemcached_set_performance_test.cc  libmemcached_test.cc  libtest.vcproj  mem_alloc_test.cc  sample_test.cc  stl_test.cc  tokener_test.cc  trivial_test.cc
trunk/nm/: um.sln
trunk/scriptstudy/: svn_usage.txt
trunk/studysolution/: StudySolution.sln
(+9120 files in other folders)
